--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -23,5 +23,6 @@ jobs:
     - name: 'Resolve Project Dependencies Using Npm'
       shell: pwsh # For Linux, use bash
       run: |
+        npm install
         npm run predeploy
         npm run deploy
