--- a/.github/workflows/deploy-to-gh-pages.yml
+++ b/.github/workflows/deploy-to-gh-pages.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   build-and-deploy:
-    runs-on: windows-latest # For Linux, use ubuntu-latest
+    runs-on: windows-latest
     environment: dev
     steps:
     - name: 'Checkout GitHub Action'
@@ -21,8 +21,10 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
 
     - name: 'Resolve Project Dependencies Using Npm'
-      shell: pwsh # For Linux, use bash
+      shell: pwsh
       run: |
         npm install
-        npm run predeploy
+
+    - name: 'Deploy to Github Pages'
+      shell: pwsh
         npm run deploy
